--- a/cs-casestudy.html
+++ b/cs-casestudy.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="noindex, nofollow">
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <title>BeerMenus Case Study &bull; Ariele Martinez, UX/UI Design</title>
+  <title>Cheese Sammies Case Study &bull; Ariele Martinez, UX/UI Design</title>
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css?family=Palanquin:100" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
@@ -49,45 +49,39 @@
       </nav>
 
       <div class="jumbotron">
-        <h1>BeerMenus Case Study</h1>
+        <h1>Cheese Sammies Case Study</h1>
+        <p>Put a site mockup or logo below this</p>
       </div>
       <!--ABOUT-->
       <div class="container-fluid process-cont" id="about">
         <h1>Overview</h1>
-            <p>Designing custom point-of-sale (POS) materials for BeerMenus, a startup company that provides beer retailers with inventory management and in-store menu display solutions.</p>
+            <p>
+              Designing a mobile-friendly food truck website. Cheese Sammies is a fictional food truck in Boston started by a man named Bryan who creates gourmet customizable grilled cheese sandwiches in 10 minutes or less.
+            </p>
             <h1>Problem</h1>
             <p>
-              Beer retailers often lack in-house design teams and the capacity to generate their own marketing materials. Our goal was to create customizable graphics for retailers to download and use to drive customers to their BeerMenus pages. Many of these businesses had expressed their frustration of not having marketing materials available and came to BeerMenus seeking a solution.
+              We were presented with the Restaurant Design challenge at Startup Institute. This challenge prompted each member of the Web Design track to create a website for a fictional restaurant.</p>
+              <p>
+In the Cheese Sammies prompt, Bryan had two specifications: he wanted his customers to know the food truck's locations by day, and he wanted to share his blog with customers.
             </p>
       </div>
       <div class="container-fluid process-cont" id="portfolio">
           <h1>Audience</h1>
-          <p>Target users were patrons who consume beer. What kind of beer drinkers? Patrons who enjoy beer and who may be potential new users of BeerMenus.</p>
+          <p>As laid out in the project brief, target users are working professionals grabbing lunch in the city. Since urban professionals are often under time constraints during lunch, Cheese Sammies' unique value proposition of serving gourmet lunch within ten minutes would appeal greatly to them.</p>
           <h1>Team &amp; Role</h1>
-          <p>I worked with fellow members of Startup Institute's Fall 2015 cohort on a 4-person team made up of a marketer, two developers, and myself as the designer.</p>
+          <p>I worked alone on this project. My roles included: UX/UI design, front-end development, creative direction, typography, and content.</p>
           <h1>Constraints</h1>
-          <p>Our project was short-term, lasting only a few weeks. BM was also undergoing a visual redesign at the time, which required constant communication regarding the changing creative guidelines for generating these graphics.<p>
+          <p>Due to their lack of a social media presence, I wasn't able to add much interactivity to the page aside from the content. For a restaurant with an active social media presence, I would add a Twitter feed as well as an Instagram feed that either captures Cheese Sammies' business account or tracks their preferred hashtag(s) (e.g. #cheesesammies, #sammiesonthego, etc.).<p>
           <h1>Process</h1>
-          <p>We visited some establishments in-person and asked managers and owners about their potential use(s) for inventory management like BeerMenus.</p>
-          <p>After discussion on which media were ideal for the POS materials, we decided that table tents, coasters, and posters would be the most-viewed materials in restaurants and retailers. I was responsible for designing the table tents and Tap Takeover poster.</p>
-          <p>Needed to consider the colors, especially since many bars and restaurants have low lighting. We needed a design that would catch the eye in all light settings. </p>
-          <p>We also needed to add in copy that would drive patrons to visit the establishments' profiles on BeerMenus. Specifically, we wanted patrons to keep up to date with the establishment's individual inventory.</p>
+          <p></p>
       </div>
           <!--CONTACT-->
       <div class="container-fluid process-cont">
             <h1>RESULTS</h1>
-            <p></p>
-            <!-- lightbox here? -->
-            <p>Click on each image to view a larger version.</p>
-            <h3>Tap Takeover Poster</h3>
-            <img src="img/tap-takeover.png" />
-            <h3>Table Tents</h3>
-            <img src="img/bm-02.png" />
-            <img src="img/bm-03.png" />
-            <img src="img/bm-04.png" />
+            <p><a href="http://www.arielemartinez.com/cheese/">Visit Site</a></p>
       </div>
       <div class="container-fluid process-cont">
-        <a href="#" class="projnav">Previous Project: XXXXX</a><br /><a href="#" class="projnav">Next Project: XXXXXX</a>
+        <a href="#" class="projnav">Previous Project: XXXXX</a><a href="#" class="projnav">Next Project: XXXXXX</a>
       </div>
             <!--FOOTER-->
       <div class="footer">
