--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <!-- /.container -->
       </nav>
 
-      <div class="jumbotron">
+      <div class="jumbotron jumbotron-main">
       </div>
       <!--ABOUT-->
       <div class="container-fluid" id="about">
@@ -65,7 +65,7 @@
           <div class="col-md-6" id="bio">
             <p>I am a UX/UI designer with a love for front-end development.
               My background includes Startup Institute New York's Web Design Track, a BA in Psychology from Bryn Mawr College, and experience in non-profit development and education.</p>
-              <p>When not at my computer, you can find me staring at the night sky, mixing new bath &amp; body products in my kitchen, nose deep in a book on the subway, or biking around the city.</p>
+              <p>Outside of designing, you can find me staring at the night sky, mixing new bath &amp; body products in my kitchen, devouring Belgian fries, nose deep in a book on the subway, or biking around the city.</p>
               <p>Currently, I am available for freelance and full-time opportunities. Interested in working with me? <a href="#contact">Contact me</a> for more information!</p>
               <a href="MartinezUXResume.pdf" target="_blank">VIEW FULL RESUME &gt;&gt;</a>
             </div>
@@ -126,7 +126,6 @@
               <div class="thumbnail">
                 <a href="img/bm-01.png" data-lightbox="beermenus" data-title="Customizable Tap Takeover Design">
                   <img src="img/bm-logo-01.png" class="img-responsive" />
-                </a>
                 <a href="img/bm-02.png" data-lightbox="beermenus" data-title="Table Tent Design"></a>
                 <a href="img/bm-03.png" data-lightbox="beermenus" data-title="Table Tent Design"></a>
                 <a href="img/bm-04.png" data-lightbox="beermenus" data-title="Table Tent Design"></a>
@@ -143,7 +142,15 @@
         <!--CONTACT-->
         <div class="container-fluid" id="contact">
           <h1>Contact</h1>
-          <p>Think we'd be a good fit? Do you have a burning question? Just want to say hello? Email me at acmartine[at]gmail.com and I'll get back to you ASAP. You can also find my chronicles on Twitter as <a href="http://www.twitter.com/arielebydesign" target="_blank">&#64;arielebydesign</a> or connect with me on <a href="http://www.linkedin.com/in/arielemartinez" target="_blank">LinkedIn</a>.</p>
+          <p>Think we'd be a good fit? Do you have a burning question? Just want to say hello? Email me at acmartine[at]gmail.com and I'll get back to you ASAP. You can also find my chronicles on Twitter as <a href="http://www.twitter.com/arielebydesign" target="_blank">&#64;arielebydesign</a> or connect with me on <a href="http://www.linkedin.com/in/arielemartinez" target="_blank">LinkedIn</a>.
+          <br /><br />
+        </p>
+        <div class="wrapper">
+          <a href="http://www.twitter.com/arielebydesign"><img src="img/i-twitter.png" class="center" /></a>
+          <a href="http://www.linkedin.com/in/arielemartinez"><img src="img/i-linkedin.png" class="center" /></a>
+          <a href="http://www.github.com/acmartine"><img src="img/i-github.png" class="center" /></a>
+          <a href="mailto:acmartine@gmail.com"><img src="img/i-mail.png" class="center" /></a>
+        </div>
         </div>
         <!--FOOTER-->
         <div class="footer">
