--- a/cs-casestudy.html
+++ b/cs-casestudy.html
@@ -53,45 +53,47 @@
         <p>Put a site mockup or logo below this</p>
       </div>
       <!--ABOUT-->
-      <div class="container-fluid process-cont" id="about">
+      <div class="container-fluid process-cont">
         <h1>Overview</h1>
-            <p>
-              Designing a mobile-friendly food truck website. Cheese Sammies is a fictional food truck in Boston started by a man named Bryan who creates gourmet customizable grilled cheese sandwiches in 10 minutes or less.
-            </p>
-            <h1>Problem</h1>
-            <p>
-              We were presented with the Restaurant Design challenge at Startup Institute. This challenge prompted each member of the Web Design track to create a website for a fictional restaurant.</p>
-              <p>
-In the Cheese Sammies prompt, Bryan had two specifications: he wanted his customers to know the food truck's locations by day, and he wanted to share his blog with customers.
-            </p>
-      </div>
-      <div class="container-fluid process-cont" id="portfolio">
+        <p>
+          Designing a mobile-friendly food truck website. Cheese Sammies is a fictional food truck in Boston started by a man named Bryan who creates gourmet customizable grilled cheese sandwiches in 10 minutes or less.
+        </p>
+        <h1>Problem</h1>
+        <p>
+          We were presented with the Restaurant Design challenge at Startup Institute. This challenge prompted each member of the Web Design track to create a website for a fictional restaurant.</p>
+          <p>
+            In the Cheese Sammies prompt, Bryan had two specifications: he wanted his customers to know the food truck's locations by day, and he wanted to share his blog with customers.
+          </p>
+        </div>
+        <div class="container-fluid process-cont">
           <h1>Audience</h1>
           <p>As laid out in the project brief, target users are working professionals grabbing lunch in the city. Since urban professionals are often under time constraints during lunch, Cheese Sammies' unique value proposition of serving gourmet lunch within ten minutes would appeal greatly to them.</p>
           <h1>Team &amp; Role</h1>
           <p>I worked alone on this project. My roles included: UX/UI design, front-end development, creative direction, typography, and content.</p>
           <h1>Constraints</h1>
           <p>Due to their lack of a social media presence, I wasn't able to add much interactivity to the page aside from the content. For a restaurant with an active social media presence, I would add a Twitter feed as well as an Instagram feed that either captures Cheese Sammies' business account or tracks their preferred hashtag(s) (e.g. #cheesesammies, #sammiesonthego, etc.).<p>
-          <h1>Process</h1>
-          <p></p>
-      </div>
+            <h1>Process</h1>
+            <p>Since the target users are working professionals on-the-go, I decided to highlight the truck's speed in serving food (&lt;10 minutes). Decided on a one-page, mobile-friendly site to make it easier for people on-the-go. The header of the page also contains a script I wrote that automatically updates the truck's location on each given day.</p>
+            <p>I wrote out a short bio for Bryan based on the few snippets about him laid out in the brief.</p>
+            <p>The food menu was broken into columns so that the visitors' eyes can easily scan from section to section, enabling them to mentally "build" their sandwich as they read. I also included the truck's full schedule to allow people to plan, and as a backup in case someone couldn't view the script on top for any reason.</p>
+          </div>
           <!--CONTACT-->
-      <div class="container-fluid process-cont">
+          <div class="container-fluid process-cont">
             <h1>RESULTS</h1>
             <p><a href="http://www.arielemartinez.com/cheese/">Visit Site</a></p>
-      </div>
-      <div class="container-fluid process-cont">
-        <a href="#" class="projnav">Previous Project: XXXXX</a><a href="#" class="projnav">Next Project: XXXXXX</a>
-      </div>
-            <!--FOOTER-->
-      <div class="footer">
-              <p>SOCIAL ICONS HERE - CHANGE ON MAIN PAGE TOO??</p>
-              <p>&copy;2016 Ariele Martinez. Made with &#9829; in Brooklyn. Powered by the Milennium Crystal.</p>
-      </div>
+          </div>
+          <div class="container-fluid process-cont">
+            <a href="#" class="projnav">Previous Project: XXXXX</a><a href="#" class="projnav">Next Project: XXXXXX</a>
+          </div>
+          <!--FOOTER-->
+          <div class="footer">
+            <p>SOCIAL ICONS HERE - CHANGE ON MAIN PAGE TOO??</p>
+            <p>&copy;2016 Ariele Martinez. Made with &#9829; in Brooklyn. Powered by the Milennium Crystal.</p>
+          </div>
 
-            <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-            <script src="js/bootstrap.min.js"></script>
-            <script src="js/smoothscroll.js"></script>
-            <script src="js/lightbox.js"></script>
-          </body>
-          </html>
+          <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+          <script src="js/bootstrap.min.js"></script>
+          <script src="js/smoothscroll.js"></script>
+          <script src="js/lightbox.js"></script>
+        </body>
+        </html>
