--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <h1>About Me</h1>
         <div class="row">
           <div class="col-md-6">
-            <img src="img/ariele-martinez.jpg" class="img-responsive img-circle" />
+            <img src="img/ariele.jpg" class="img-responsive img-circle" />
           </div>
           <div class="col-md-6" id="bio">
             <p>I am a UX/UI designer with a love for front-end development.
