--- a/bm-casestudy.html
+++ b/bm-casestudy.html
@@ -57,24 +57,22 @@
             <p>Designing custom point-of-sale (POS) materials for BeerMenus, a startup company that provides beer retailers with inventory management and in-store menu display solutions.</p>
             <h1>Problem</h1>
             <p>
-              Beer retailers often lack in-house design teams and the capacity to generate their own marketing materials. Our goal was to create customizable graphics for retailers to download and use to drive customers to their BeerMenus pages. Many of these businesses had expressed their frustration of not having marketing materials available and came to BeerMenus seeking a solution.
-            </p>
-      </div>
-      <div class="container-fluid process-cont" id="portfolio">
+              Beer retailers often lack in-house design teams and the capacity to generate their own marketing materials. Our goal was to create graphics that retailers could download, customize easily, and display to drive their customers to their BeerMenus pages. Many of these businesses felt frustrated at not having marketing materials available and came to BeerMenus seeking a solution.</p>
           <h1>Audience</h1>
-          <p>Target users were patrons who consume beer. What kind of beer drinkers? Patrons who enjoy beer and who may be potential new users of BeerMenus.</p>
+          <p>Target users were patrons who enjoy consuming beer and who are either current or potential users of BeerMenus.</p>
+          <p>We visited some establishments in-person and asked managers and owners about their potential use(s) for inventory management like BeerMenus. The majority of them reacted positively to the concept, and echoed their need for customized marketing materials.</p>
           <h1>Team &amp; Role</h1>
-          <p>I worked with fellow members of Startup Institute's Fall 2015 cohort on a 4-person team made up of a marketer, two developers, and myself as the designer.</p>
+          <p>I worked with fellow members of Startup Institute's Fall 2015 cohort on a 4-person team made up of a marketer, two developers, and myself as the designer. I was personally responsible for designing the table tents and a Tap Takeover poster.</p>
           <h1>Constraints</h1>
-          <p>Our project was short-term, lasting only a few weeks. BM was also undergoing a visual redesign at the time, which required constant communication regarding the changing creative guidelines for generating these graphics.<p>
-          <h1>Process</h1>
-          <p>We visited some establishments in-person and asked managers and owners about their potential use(s) for inventory management like BeerMenus.</p>
-          <p>After discussion on which media were ideal for the POS materials, we decided that table tents, coasters, and posters would be the most-viewed materials in restaurants and retailers. I was responsible for designing the table tents and Tap Takeover poster.</p>
-          <p>Needed to consider the colors, especially since many bars and restaurants have low lighting. We needed a design that would catch the eye in all light settings. </p>
-          <p>We also needed to add in copy that would drive patrons to visit the establishments' profiles on BeerMenus. Specifically, we wanted patrons to keep up to date with the establishment's individual inventory.</p>
-      </div>
-          <!--CONTACT-->
-      <div class="container-fluid process-cont">
+          <p>Our project was short-term, lasting only a few weeks. BeerMenus was also undergoing a visual redesign at the time, which required constant communication regarding the changing creative guidelines for generating these graphics.<p>
+          <h1>Design Process</h1>
+          <p>After discussion on which media were ideal for the POS materials, we decided that table tents, coasters, and posters would be the most suitable and most-viewed materials in restaurants and retailers.</p>
+
+          <p>The colors were very important, especially since many bars and restaurants have low lighting. The designs needed to catch the eye in all light settings. I kept a color scheme reminiscent of beer by using brown, cream, gold, and pops of white, and made sure there was enough contrast between the words and the background image.</p>
+
+          <p>For the table tents, we also needed to add in copy that would drive patrons to visit the establishment's profiles on BeerMenus. Specifically, we wanted them to keep up to date with the specific establishment's inventory. I made sure to include social media icons near the logo to let customers know where to find BM online.</p>
+
+          <p>The Tap Takeover posters were slightly different. <em>(Sidenote: A Tap Takeover is when a bar exclusively serves one brewery's beer selections during a special event.)</em> For the Tap Takeover posters, I left space for the retailers to add in their logo, the brewery's logo, and a list of the beers to be featured at the event.</p>
             <h1>RESULTS</h1>
             <p></p>
             <!-- lightbox here? -->
