--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
   <title>Ariele Martinez - UX/UI Design &amp; Front-End Development</title>
+  <script src="https://use.fontawesome.com/250f7d0f0a.js"></script>
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css?family=Palanquin:100" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/custom.css" rel="stylesheet" type="text/css">
   <link href="css/lightbox.css" rel="stylesheet">
-
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -126,49 +126,52 @@
               <div class="thumbnail">
                 <a href="img/bm-01.png" data-lightbox="beermenus" data-title="Customizable Tap Takeover Design">
                   <img src="img/bm-logo-01.png" class="img-responsive" />
-                <a href="img/bm-02.png" data-lightbox="beermenus" data-title="Table Tent Design"></a>
-                <a href="img/bm-03.png" data-lightbox="beermenus" data-title="Table Tent Design"></a>
-                <a href="img/bm-04.png" data-lightbox="beermenus" data-title="Table Tent Design"></a>
-                <div class="caption">
-                  <h4>Beer Menus</h4>
-                  <p>Print &amp; Graphic Design</p>
+                  <a href="img/bm-02.png" data-lightbox="beermenus" data-title="Table Tent Design"></a>
+                  <a href="img/bm-03.png" data-lightbox="beermenus" data-title="Table Tent Design"></a>
+                  <a href="img/bm-04.png" data-lightbox="beermenus" data-title="Table Tent Design"></a>
+                  <div class="caption">
+                    <h4>Beer Menus</h4>
+                    <p>Print &amp; Graphic Design</p>
+                  </div>
                 </div>
               </div>
+            </div><!--end row-->
+          </div><!--end portfolio section-->
+
+          <!--CONTACT-->
+          <div class="container-fluid" id="contact">
+            <h1>Contact</h1>
+            <p>Think we'd be a good fit? Do you have a burning question? Just want to say hello? Email me at acmartine[at]gmail.com and I'll get back to you ASAP. You can also find my chronicles on Twitter as <a href="http://www.twitter.com/arielebydesign" target="_blank">&#64;arielebydesign</a> or connect with me on <a href="http://www.linkedin.com/in/arielemartinez" target="_blank">LinkedIn</a>.
+              <br /><br />
+            </p>
+            <div class="icon_center">
+              <a href="http://www.twitter.com/arielebydesign" class="socmedia"><i class="fa fa-twitter fa-3x" aria-hidden="true"></i></a>
+              <a href="http://www.linkedin.com/in/arielemartinez" class="socmedia"><i class="fa fa-linkedin fa-3x" aria-hidden="true"></i>
+              </a>
+              <a href="http://www.github.com/acmartine" class="socmedia"><i class="fa fa-github-alt fa-3x" aria-hidden="true"></i>
+              </a>
+              <a href="mailto:acmartine@gmail.com" class="socmedia"><i class="fa fa-envelope fa-3x" aria-hidden="true"></i>
+              </a>
             </div>
-          </div><!--end row-->
-        </div><!--end portfolio section-->
+          </div>
+          <!--FOOTER-->
+          <div class="footer">
+            <p>&copy;2016 Ariele Martinez. Made with &#9829; in Brooklyn. Powered by the Milennium Crystal.</p>
+          </div>
 
-        <!--CONTACT-->
-        <div class="container-fluid" id="contact">
-          <h1>Contact</h1>
-          <p>Think we'd be a good fit? Do you have a burning question? Just want to say hello? Email me at acmartine[at]gmail.com and I'll get back to you ASAP. You can also find my chronicles on Twitter as <a href="http://www.twitter.com/arielebydesign" target="_blank">&#64;arielebydesign</a> or connect with me on <a href="http://www.linkedin.com/in/arielemartinez" target="_blank">LinkedIn</a>.
-          <br /><br />
-        </p>
-        <div class="wrapper">
-          <a href="http://www.twitter.com/arielebydesign"><img src="img/i-twitter.png" class="center" /></a>
-          <a href="http://www.linkedin.com/in/arielemartinez"><img src="img/i-linkedin.png" class="center" /></a>
-          <a href="http://www.github.com/acmartine"><img src="img/i-github.png" class="center" /></a>
-          <a href="mailto:acmartine@gmail.com"><img src="img/i-mail.png" class="center" /></a>
-        </div>
-        </div>
-        <!--FOOTER-->
-        <div class="footer">
-          <p>&copy;2016 Ariele Martinez. Made with &#9829; in Brooklyn. Powered by the Milennium Crystal.</p>
-        </div>
+          <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+          <script src="js/bootstrap.min.js"></script>
+          <script src="js/smoothscroll.js"></script>
+          <script src="js/lightbox.js"></script>
+          <script>
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
-        <script src="js/smoothscroll.js"></script>
-        <script src="js/lightbox.js"></script>
-        <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+          ga('create', 'UA-85550507-1', 'auto');
+          ga('send', 'pageview');
 
-        ga('create', 'UA-85550507-1', 'auto');
-        ga('send', 'pageview');
-
-        </script>
-      </body>
-      </html>
+          </script>
+        </body>
+        </html>
