--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
               My background includes Startup Institute New York's Web Design Track, a BA in Psychology from Bryn Mawr College, and experience in non-profit development and education.</p>
               <p>Outside of designing, you can find me staring at the night sky, mixing new bath &amp; body products in my kitchen, devouring Belgian fries, nose deep in a book on the subway, or biking around the city.</p>
               <p>Currently, I am available for freelance and full-time opportunities. Interested in working with me? <a href="#contact">Contact me</a> for more information!</p>
-              <a href="MartinezUXResume.pdf" target="_blank">VIEW FULL RESUME &gt;&gt;</a>
+              <p>
+                <a href="MartinezUXResume.pdf" class="resume" target="_blank">VIEW FULL RESUME &gt;&gt;</a>
+              </p>
             </div>
           </div>
         </div>
