--- a/campus-perks/index.html
+++ b/campus-perks/index.html
@@ -76,7 +76,7 @@
         </p>
         <h1>Team &amp; Role</h1>
         <p>
-          I worked alongside 2 web developers, one of whom was the founder of CampusPerks. We all worked together to hash out the details of the app. I was responsible for the visuals and the front end of the site
+          I worked alongside 2 web developers, one of whom was the founder of CampusPerks. We all worked together to hash out the details of the app. I was responsible for assembling the visuals and building the front end of the site.
         </p>
         <p>
           Roles:
@@ -133,7 +133,7 @@
       </div>
       <!--FOOTER-->
       <div class="footer">
-        <p>&copy;2016 Ariele Martinez. Made with &#9829; in Brooklyn. Powered by the Milennium Crystal.</p>
+        <p>&copy;2017 Ariele Martinez. Made with &#9829; in Brooklyn. Powered by the Milennium Crystal.</p>
       </div>
 
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
