minor bio tweak

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <title>Ariele Martinez - UX/UI Design &amp; Front-End Development</title>
+  <title>Ariele Martinez - Web &amp; Graphic Designer</title>
   <script src="https://use.fontawesome.com/250f7d0f0a.js"></script>
   <!--Favicon info-->
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -69,10 +69,9 @@
             <img src="img/ariele.jpg" class="img-responsive img-circle" />
           </div>
           <div class="col-md-6" id="bio">
-            <p>I am a UX/UI designer with a love for front-end development.
+            <p>Welcome! I am a web &amp; graphic designer with a love for UX and code.
               My background includes Startup Institute New York's Web Design Track, a BA in Psychology from Bryn Mawr College, and experience in non-profit development and education.</p>
               <p>Outside of designing, you can find me staring at the night sky, mixing new bath &amp; body products in my kitchen, devouring Belgian fries, nose deep in a book on the subway, or biking around the city.</p>
-              <p>Currently, I am available for freelance and full-time opportunities. Interested in working with me? <a href="#contact">Contact me</a> for more information!</p>
               <p>
                 <a href="MartinezUXResume.pdf" class="resume" target="_blank">VIEW FULL RESUME &gt;&gt;</a>
               </p>
@@ -147,7 +146,7 @@
         <!--CONTACT-->
         <div class="container-fluid" id="contact">
           <h1>Contact</h1>
-          <p>Think we'd be a good fit? Do you have a burning question? Just want to say hello? Email me at acmartine[at]gmail.com and I'll get back to you ASAP. You can also find my chronicles on Twitter as <a href="http://www.twitter.com/arielebydesign" target="_blank">&#64;arielebydesign</a> or connect with me on <a href="http://www.linkedin.com/in/arielemartinez" target="_blank">LinkedIn</a>.
+          <p>Say hi! Email me at acmartine[at]gmail.com and I'll get back to you ASAP. You can also find my chronicles on Twitter as <a href="http://www.twitter.com/arielebydesign" target="_blank">&#64;arielebydesign</a> or connect with me on <a href="http://www.linkedin.com/in/arielemartinez" target="_blank">LinkedIn</a>.
             <br /><br />
           </p>
           <div class="icon_center">
