new proj may 2017

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
               My background includes Startup Institute New York's Web Design Track, a BA in Psychology from Bryn Mawr College, and experience in non-profit development and education.</p>
               <p>Outside of designing, you can find me staring at the night sky, mixing new bath &amp; body products in my kitchen, devouring Belgian fries, nose deep in a book on the subway, or biking around the city.</p>
               <p>
-                <a href="MartinezUXResume.pdf" class="resume" target="_blank">VIEW FULL RESUME &gt;&gt;</a>
+                <a href="MartinezDesignResume.pdf" class="resume" target="_blank">VIEW FULL RESUME &gt;&gt;</a>
               </p>
             </div>
           </div>
@@ -82,6 +82,17 @@
         <div class="container-fluid" id="portfolio">
           <h1>Portfolio</h1>
           <div class="row">
+            <div class="col-sm-4 col-md-4">
+              <div class="thumbnail">
+                <a href="http://www.cardiodigitalfit.com">
+                  <img src="img/cdf.png" class="img-responsive" />
+                </a>
+                <div class="caption">
+                  <h4>Cardio Digital Fit</h4>
+                  <p>WooCommerce Design</p>
+                </div>
+              </div>
+            </div>
             <div class="col-sm-4 col-md-4">
               <div class="thumbnail">
                 <a href="boule-bakery/index.html">
@@ -104,7 +115,9 @@
                 </div>
               </div>
             </div>
-            <!-- Campus Perks -->
+          </div><!--end row-->
+          <div class="row"><!--begin row-->
+          <!-- Campus Perks -->
             <div class="col-sm-4 col-md-4">
               <div class="thumbnail">
                 <a href="campus-perks/index.html">
@@ -116,8 +129,6 @@
                 </div>
               </div>
             </div>
-          </div><!--end row-->
-          <div class="row"><!--begin row-->
             <div class="col-sm-4 col-md-4">
               <div class="thumbnail">
                 <a href="cheese-sammies/index.html">
