--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <h1>About Me</h1>
         <div class="row">
           <div class="col-md-6">
-            <img src="img/ariele.jpg" class="img-responsive img-circle" />
+            <img src="img/ariele2.jpg" class="img-responsive img-circle" />
           </div>
           <div class="col-md-6" id="bio">
             <p>Welcome! I am a web &amp; graphic designer with a love for UX and code.
