--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <img src="img/ariele2.JPG" class="img-responsive img-circle" />
           </div>
           <div class="col-md-6" id="bio">
-            <p>Welcome! I am a web &amp; graphic designer with a love for UX and code.
+            <p>Welcome! I am a web &amp; graphic designer in Philly with a love for UX and code.
               My background includes Startup Institute New York's Web Design Track, a BA in Psychology from Bryn Mawr College, and experience in non-profit development and education.</p>
               <p>Outside of designing, you can find me staring at the night sky, mixing new bath &amp; body products in my kitchen, devouring Belgian fries, nose deep in a book on the subway, or biking around the city.</p>
               <p>
@@ -172,7 +172,7 @@
         </div>
         <!--FOOTER-->
         <div class="footer">
-          <p>&copy;2017 Ariele Martinez. Made with &#9829; in Brooklyn. Powered by the Milennium Crystal.</p>
+          <p>&copy;2017 Ariele Martinez. Made with &#9829; in Philadelphia. Powered by the Milennium Crystal.</p>
         </div>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
