--- a/beer-menus/index.html
+++ b/beer-menus/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="noindex, nofollow">
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <title>BeerMenus Case Study &bull; Ariele Martinez, UX/UI Design</title>
+  <title>BeerMenus | Ariele Martinez-Bugay</title>
   <!--Favicon info-->
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
@@ -39,7 +39,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand topnav" href="#">Ariele Martinez</a>
+            <a class="navbar-brand topnav" href="#">Ariele Martinez-Bugay</a>
           </div>
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
