--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <title>Ariele Martinez - Web &amp; Graphic Designer</title>
+  <title>Ariele Martinez-Bugay | Front-End Developer &amp; Designer</title>
   <script src="https://use.fontawesome.com/250f7d0f0a.js"></script>
   <!--Favicon info-->
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -38,7 +38,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand topnav" href="#">Ariele Martinez</a>
+            <a class="navbar-brand topnav" href="#">Ariele Martinez-Bugay</a>
           </div>
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -63,15 +63,15 @@
       </div>
       <!--ABOUT-->
       <div class="container-fluid" id="about">
-        <h1>About Me</h1>
+        <h1>About</h1>
         <div class="row">
           <div class="col-md-6">
             <img src="img/ariele2.JPG" class="img-responsive img-circle" />
           </div>
           <div class="col-md-6" id="bio">
-            <p>Welcome! I am a web &amp; graphic designer in Philly with a love for UX and code.
+            <p>Welcome! I am a front-end developer and designer in Philadelphia with a love for UX and code.
               My background includes Startup Institute New York's Web Design Track, a BA in Psychology from Bryn Mawr College, and experience in non-profit development and education.</p>
-              <p>Outside of designing, you can find me staring at the night sky, mixing new bath &amp; body products in my kitchen, devouring Belgian fries, nose deep in a book on the subway, or biking around the city.</p>
+              <p>Outside of wrangling code, you can find me staring at the night sky, mixing new bath &amp; body products in my kitchen, devouring Belgian fries, nose deep in a book at a park, or biking around the city.</p>
               <p>
                 <a href="MartinezDesignResume.pdf" class="resume" target="_blank">VIEW FULL RESUME &gt;&gt;</a>
               </p>
@@ -147,7 +147,7 @@
                 </a>
                 <div class="caption">
                   <h4>Beer Menus</h4>
-                  <p>Print &amp; Graphic Design</p>
+                  <p>Print Design</p>
                 </div>
               </div>
             </div>
@@ -157,22 +157,20 @@
         <!--CONTACT-->
         <div class="container-fluid" id="contact">
           <h1>Contact</h1>
-          <p>Say hi! Email me at acmartine[at]gmail.com and I'll get back to you ASAP. You can also find my chronicles on Twitter as <a href="http://www.twitter.com/arielebydesign" target="_blank">&#64;arielebydesign</a> or connect with me on <a href="http://www.linkedin.com/in/arielemartinez" target="_blank">LinkedIn</a>.
-            <br /><br />
-          </p>
+          <p>Drop me a line via email at acmartine[at]gmail.com, on Twitter at <a href="http://www.twitter.com/arielebydesign" target="_blank">&#64;arielebydesign</a>, or connect with me on <a href="http://www.linkedin.com/in/arielemartinez" target="_blank">LinkedIn</a>.</p>
           <div class="icon_center">
-            <a href="http://www.twitter.com/arielebydesign"><i class="fa fa-twitter fa-3x" aria-hidden="true"></i></a>
-            <a href="http://www.linkedin.com/in/arielemartinez"><i class="fa fa-linkedin fa-3x" aria-hidden="true"></i>
+            <a href="http://www.twitter.com/arielebydesign" target="_blank"><i class="fa fa-twitter fa-3x" aria-hidden="true"></i></a>
+            <a href="http://www.linkedin.com/in/arielemartinez" target="_blank"><i class="fa fa-linkedin fa-3x" aria-hidden="true"></i>
             </a>
-            <a href="http://www.github.com/acmartine"><i class="fa fa-github-alt fa-3x" aria-hidden="true"></i>
+            <a href="http://www.github.com/acmartine" target="_blank"><i class="fa fa-github-alt fa-3x" aria-hidden="true"></i>
             </a>
-            <a href="mailto:acmartine@gmail.com"><i class="fa fa-envelope fa-3x" aria-hidden="true"></i>
+            <a href="mailto:acmartine@gmail.com" target="_blank"><i class="fa fa-envelope fa-3x" aria-hidden="true"></i>
             </a>
           </div>
         </div>
         <!--FOOTER-->
         <div class="footer">
-          <p>&copy;<script>document.write(new Date().getFullYear())</script> Ariele Martinez. Made with &#9829; in Philadelphia. Powered by the Milennium Crystal.</p>
+          <p>&copy;<script>document.write(new Date().getFullYear())</script> Ariele Martinez-Bugay. Made with &#9829; in Philadelphia. Powered by the Milennium Crystal.</p>
         </div>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
