--- a/cheese-sammies/index.html
+++ b/cheese-sammies/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="noindex, nofollow">
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <title>Cheese Sammies Case Study &bull; Ariele Martinez, UX/UI Design</title>
+  <title>Cheese Sammies Case Study | Ariele Martinez-Bugay</title>
   <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css?family=Palanquin:100" rel="stylesheet">
   <link href="../css/bootstrap.min.css" rel="stylesheet">
@@ -32,7 +32,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand topnav" href="#">Ariele Martinez</a>
+            <a class="navbar-brand topnav" href="#">Ariele Martinez-Bugay</a>
           </div>
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
