--- a/index.html
+++ b/index.html
@@ -66,14 +66,14 @@
         <h1>About</h1>
         <div class="row">
           <div class="col-md-6">
-            <img src="img/ariele2.JPG" class="img-responsive img-circle" />
+            <img src="img/headshot-amb.jpg" class="img-responsive img-circle" />
           </div>
           <div class="col-md-6" id="bio">
             <p>Welcome! I am a front-end developer and designer in Philadelphia with a love for UX and code.
               My background includes Startup Institute New York's Web Design Track, a BA in Psychology from Bryn Mawr College, and experience in non-profit development and education.</p>
               <p>Outside of wrangling code, you can find me staring at the night sky, mixing new bath &amp; body products in my kitchen, devouring Belgian fries, nose deep in a book at a park, or biking around the city.</p>
               <p>
-                <a href="MartinezDesignResume.pdf" class="resume" target="_blank">VIEW FULL RESUME &gt;&gt;</a>
+                <a href="MartinezResume.pdf" class="resume" target="_blank">VIEW FULL RESUME &gt;&gt;</a>
               </p>
             </div>
           </div>
