--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <h1>About</h1>
         <div class="row">
           <div class="col-md-6">
-            <img src="img/headshot-amb.jpg" class="img-responsive img-circle" />
+            <img src="img/headshot-amb.jpeg" class="img-responsive img-circle" />
           </div>
           <div class="col-md-6" id="bio">
             <p>Welcome! I am a front-end developer and designer in Philadelphia with a love for UX and code.
